--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-body {
-  background: url('https://source.unsplash.com/rN_RMqSXRKw/1920x1080') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+.icon {
+  height: 50px;
+  width: 50px;
 }
