--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,20 @@
   height: 50px;
   width: 50px;
 }
+
+.slidein {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
